# sqlx-migrate

./: CHANGELOG.md  LICENSE.md  README.md
crates/sqlx-migrate/: Cargo.toml  README.md
crates/sqlx-migrate/src/: cli.rs  context.rs  db.rs  error.rs  lib.rs
crates/sqlx-migrate/src/db/: postgres.rs  sqlite.rs
examples/migrations-example/: Cargo.toml  README.md  build.rs
examples/migrations-example/migrations/: 20211215161742_initial_migration.migrate.sql  20211215161742_initial_migration.revert.sql  20211215162220_plush_sharks.migrate.rs  20211215162220_plush_sharks.revert.rs
examples/migrations-example/src/: generated.rs
