[package]
name = "migrations-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barrel = { version = "0.7.0", features = ["pg"] }
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "postgres"] }
sqlx-migrate = { version = "0.1.0", features = ["cli", "postgres"] }

[build-dependencies]
sqlx-migrate = { version = "0.1.0", features = ["generate"] }

[[bin]]
name = "migrations-example"
path = "bin/migrate.rs"
